--- a/exec/multispec/GNUmakefile
+++ b/exec/multispec/GNUmakefile
@@ -10,8 +10,8 @@ COMP      = gnu
 DIM       = 2
 DSMC      = FALSE
 
-TINY_PROFILE = TRUE
-USE_PARTICLES = TRUE
+TINY_PROFILE = FALSE
+USE_PARTICLES = FALSE
 
 include $(AMREX_HOME)/Tools/GNUMake/Make.defs
 
